# cognitive-core

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  AGENT_GUIDE.md  AGENT_HANDOFF.md  AGENT_OPERATIONS.md  CHANGELOG.md  CHERRY_STUDIO.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  DEMO.md  DEPLOY-SERVER.md  DEPLOY.md  Dockerfile  Dockerfile.gpu  FAST_MEMORY.md  LICENSE  LOCAL_LLM.md  MARKET.md  PRE_DEPLOY_CHECKLIST.md  README.md  REMOTE_SETUP.md  SECURITY.md  UPGRADE.md  alembic.ini  docker-compose.gpu.yml  docker-compose.local-llm.yml  docker-compose.prod.yml  docker-compose.yml  install-server.sh  installer.ps1  installer.sh  pyproject.toml  requirements-gpu.txt  requirements.txt  roadmap.md  (+1 more)
.claude-deploy/: agent-keys.txt
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
app/: __init__.py  config.py  main.py  worker.py
cognitive-client/: pyproject.toml
cognitive-client/cognitive/: __init__.py  client.py
deploy/: ORCHESTRATOR.md  PATCH_mcp_protocol.md  cogcore-nightly.service  cogcore-nightly.timer  cognitive-deploy.service  cognitive-deploy.timer  cognitive-orchestrator-launch.sh  cognitive-orchestrator.env.example  cognitive-orchestrator.service  install-auto-deploy.sh
docs/: agent-discovery.md  agent-loop.md  case-studies.md  compliance-152fz.md  concepts.md  dpa-template-152fz.md  edge-architecture.md  external-providers.md  gitea-tenant-onboarding.md  index.md  launch-announcement.md  memory-scope.md  migration-from-competitors.md  morning-checklist.md  onboarding-vps.md  orchestrator.md  quickstart-billing.md  quickstart-chatgpt.md  quickstart-claude-code.md  quickstart-cursor.md  quickstart-langchain.md  (+7 more)
launch/mcp-wrapper/: README.md  cognitive_core_mcp.py  install.sh  pyproject.toml
(+326 files in other folders)
