[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-client"
version = "0.2.0"
description = "Python SDK for Cognitive Core — 5-layer memory system for AI agents"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cognitive Core Team"}]
dependencies = ["httpx>=0.27", "pydantic>=2"]

[project.optional-dependencies]
async = ["httpx>=0.27"]
sync = ["requests>=2.32"]
